deploy/multiplayer-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: multiplayer-server
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: multiplayer-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplayer-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiplayer-server
  template:
    metadata:
      labels:
        app: multiplayer-server
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: multiplayer-server
          image: rejdeboer.azurecr.io/multiplayer-server:ff41531f56e056c56fd826c57ef8f362a65bf7fc
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
          volumeMounts:
          - name: az-root-certificate
            mountPath: "/mnt/certificates"
            readOnly: true
      volumes:
        - name: az-root-certificate
          configMap:
            name: az-root-certificate
