deploy/multiplayer-websocket-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: multiplayer-websocket
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: multiplayer-websocket
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplayer-websocket
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiplayer-websocket
  template:
    metadata:
      labels:
        app: multiplayer-websocket
    spec:
      containers:
        - name: multiplayer-websocket
          image: rejdeboer.azurecr.io/multiplayer-websocket:ebbfd9abe901550c0ba756c71ee15522fa0c1130
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
