deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiplayer-server
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt 
spec:
  ingressClassName: nginx
  rules:
    - host: api.rejdeboer.com
      http:
        paths:
          - path: /sync
            pathType: Prefix
            backend:
              service:
                name: multiplayer-websocket
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multiplayer-server
                port:
                  number: 80
  tls:
    - secretName: letsencrypt-nginx
      hosts:
        - api.rejdeboer.com
